# minecraft-data-rs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: test.yml
src/: lib.rs
src/api/: biomes.rs  blocks.rs  enchantments.rs  entities.rs  entity_loot.rs  foods.rs  items.rs  loot.rs  mod.rs  protocol.rs  recipes.rs  versions.rs
src/api/tests/: biomes.rs  blocks.rs  enchantments.rs  entities.rs  foods.rs  items.rs  loot.rs  mod.rs  protocol.rs  recipes.rs  versions.rs
src/data/: datapaths.rs  mod.rs
src/models/: biome.rs  block.rs  block_collision_shapes.rs  block_loot.rs  enchantment.rs  entity.rs  entity_loot.rs  food.rs  item.rs  mod.rs  recipe.rs  version.rs
src/models/protocol/: mod.rs  packet_mapper.rs  types.rs
src/utils/: error.rs
