[package]
name = "minecraft-data-rs"
version = "0.4.6"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "A wrapper for minecraft-data"
repository = "https://github.com/Trivernis/minecraft-data-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
serde_json = "1.0.81"
serde_derive = "1.0.137"
serde = "1.0.137"
include_dir = { version = "0.7.2", optional = true }
itertools = { version = "0.10.3", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["include-data"]
include-data = ["include_dir", "itertools", "lazy_static"]

