[package]
name = "minecraft-data-rs"
version = "0.7.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "A wrapper for minecraft-data"
repository = "https://github.com/Trivernis/minecraft-data-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
serde_json = "1.0.91"
serde_derive = "1.0.151"
serde = "1.0.151"
include_dir = { version = "0.7.3", optional = true }
itertools = { version = "0.10.5", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["include-data", "api"]
include-data = ["include_dir", "itertools", "lazy_static"]
api = ["include-data"]
